--- a/Cat_or_Dog?.ipynb
+++ b/Cat_or_Dog?.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "16VYlFAYfj5cUoEA16u7devWRjjqna6BP",
-      "authorship_tag": "ABX9TyNO0ikMZRTcltopCIqUbBoO",
+      "authorship_tag": "ABX9TyOkPt+UJLH7PV2lImzvSGPy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,8 +15,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -119,6 +118,20 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "for animal in os.listdir('drive/MyDrive'):\n",
+        "  if animal.endswith('zip'):\n",
+        "    destination = animal[:-4]\n",
+        "    !unzip -q -o drive/MyDrive/$animal -d $destination"
+      ],
+      "metadata": {
+        "id": "lchqT-l9l1OR"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "**1.2 Remove dodgy images**"
@@ -136,7 +149,7 @@
       "metadata": {
         "id": "b0OckenldQh3"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -147,7 +160,7 @@
       "metadata": {
         "id": "aR-wJPFJnAJ4"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -158,7 +171,7 @@
       "metadata": {
         "id": "52Zq8ELgnHcM"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
